# Ayur

./: .gitignore  Ayur.csproj  AyurColor.cs  AyurEvent.cs  AyurSolution.sln  CMakeLists.txt  DOCS.md  FEATURES.md  GETTINGSTARTED.md  LICENSE  MyGame.cs  Program.cs  README.md  Texture.cs  Window.cs
.github/workflows/: dotnet.yml
Core/: AyurEvent.cs  CMakeLists.txt  Game.cs  GameRunner.cs  Window.cs  framework.c  framework.h  spriteAnimation.c
Framework/: AmlilColor.cs  AyurColor.cs  CMakeLists.txt  Color.cs  Colors.cs  Core.cs  Graphics.cs  Program.cs  Rectangle.cs  SpriteAnimation.cs
Rendering/: AyurColor.cs  Texture.cs
Rendering/Shapes/: CircleShape.cs  LineShape.cs  RectangleShape.cs  Shape.cs
